Correctly align marsh swatch. Fixes #204

--- a/src/scss/_legend.scss
+++ b/src/scss/_legend.scss
@@ -135,6 +135,7 @@ $legend-width: 320px;
   // justify-content: space-between;
 }
 
+.swatch.mangroves,
 .swatch.ripple {
   margin-left: 10px;
 }
